# traffic-storage

./: .env.example  .gitignore  README.md  env.example  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  vercel.json
api/: database.py  main.py  pytest.ini  requirements.txt  run_server.py  server.py  storage_manager.py
api/api/middleware/: error_handler.py  logging_middleware.py
api/api/routes/: download.py  upload.py
api/config/: __init__.py  logging_config.py  settings.py
api/models/: __init__.py  enums.py  metadata_index.py  schemas.py
api/modules/blockdag/: blockdag_client.py
api/modules/ipfs/: ipfs_manager.py
api/schemas/: data_schema.py  optimization_data.py
api/scripts/: generate_jsons.py  validator.py
api/services/: __init__.py  blockdag_service.py  ipfs_service.py  storage_service.py
api/tests/: test_storage.py
api/tests/input/invalid_data/: invalid_data.json
api/tests/input/valid_data/: valid_data.json
api/utils/: __init__.py  exceptions.py  validators.py
config/: settings.py
contracts/: DEPLOY.md  TrafficStorage.sol  hardhat.config.ts
contracts/artifacts/contracts/TrafficStorage.sol/: TrafficStorage.dbg.json  TrafficStorage.json
contracts/cache/: solidity-files-cache.json
contracts/scripts/: deploy.ts
contracts/test/: TrafficStorage.ts
contracts/typechain-types/: TrafficStorage.ts  hardhat.d.ts  index.ts
contracts/typechain-types/factories/: TrafficStorage__factory.ts  index.ts
ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
ignition/deployments/chain-11155111/artifacts/: TrafficStorage#TrafficStorage.dbg.json  TrafficStorage#TrafficStorage.json
ignition/modules/: TrafficStorage.ts
modules/: utils.py
modules/services/: storage.py
modules/storage/: blockdag.py  ipfs.py
scripts/: deploy.ts  generate_jsons.py  getCID.ts  setCID.ts
test/: TrafficStorage.ts
tests/integration/: README.md
tests/integration/logs/storage_metrics/: precision_alto.csv  precision_bajo.csv  precision_medio.csv  storage_metrics.csv
tests/integration/logs/storage_metrics/alto/: 20251001T012311Z_run_01_download.json  20251001T012311Z_run_01_upload.json  20251001T012312Z_run_02_download.json  20251001T012312Z_run_02_upload.json  20251001T012313Z_run_03_download.json  20251001T012313Z_run_03_upload.json  20251001T012314Z_run_04_download.json  20251001T012314Z_run_04_upload.json  20251001T012315Z_run_05_download.json  (+21 more)
tests/integration/reports/: informe_septiembre.tex
tests/integration/scripts/: api_shim.py  run_all.sh  storage_bench.py  storage_metrics.py  verify_storage_precision.py
(+94 files in other folders)
