[project]
name = "traffic-storage"
version = "0.1.0"
description = "Traffic storage service using FastAPI, IPFS, and BlockDAG blockchain for decentralized data storage."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "base58==2.1.1",
    "bitarray==3.3.1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "ckzg==2.1.1",
    "click==8.1.8",
    "cytoolz==1.0.1",
    "eth-account==0.13.7",
    "eth-hash==0.7.1",
    "eth-keyfile==0.8.1",
    "eth-keys==0.7.0",
    "eth-rlp==2.2.0",
    "eth-typing==5.2.1",
    "eth-utils==5.3.0",
    "eth_abi==5.2.0",
    "fastapi==0.115.12",
    "frozenlist==1.6.0",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "hexbytes==1.3.0",
    "idna==3.10",
    "ipfshttpclient==0.7.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "multiaddr==0.0.9",
    "multidict==6.4.3",
    "netaddr==1.3.0",
    "packaging==25.0",
    "parsimonious==0.10.0",
    "propcache==0.3.1",
    "pycryptodome==3.22.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.1",
    "python-dotenv==1.1.0",
    "pyunormalize==16.0.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rlp==4.1.0",
    "rpds-py==0.24.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.41",
    "starlette==0.46.2",
    "toolz==1.0.0",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "varint==1.0.2",
    "web3==7.10.0",
    "websockets==15.0.1",
    "yarl==1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[project.optional-dependencies]
speedups = [
    "httptools==0.6.4",
    "uvloop==0.21.0",
]

dev = [
    "ruff>=0.6.0,<1.0.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "iniconfig==2.1.0",
    "pluggy==1.5.0",
    "types-requests==2.32.0.20250328",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["api", "modules"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E203",  # espacio antes de ':' (para compatibilidad con muchos formateadores)
    "E502",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

